# cmake-tutorial

./: README.md
01-a_basic_starting_point/: CMakeLists.txt  README.md  config.h.in  tutorial.c
02-adding_a_library/: CMakeLists.txt  tutorial.c
02-adding_a_library/math/: CMakeLists.txt  mysqrt.c  mysqrt.h
